fixed overflow on edit note

--- a/sparknotes/src/containers/EditNote.css
+++ b/sparknotes/src/containers/EditNote.css
@@ -11,6 +11,7 @@
 .editNote__form {
     display: flex;
     flex-direction: column;
+    height: 80%;
 }
 
 .editNote__form__title {
